[package]
name = "cartographer"
version = "0.1.0"
authors = ["Raphael Bernhard <beraphae@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gimli = "0.20.0"
object = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.0"
